2009-07-27  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/ETClassMirror.h:
	* Source/ETClassMirror.m:
	(-instanceVariableMirrorsWithOwnerMirror:, 
	-allInstanceVariableMirrorsWithOwnerMirror:): Added.
	(-instanceVariableMirrors, -allInstanceVariableMirrors): Moved the 
	implementation into the two new methods mentioned above and updated to 
	now simply call those new methods.
	* Headers/ETObjectMirror.h:
	* Source/ETSourceMirror.m:
	(-instanceVariableMirrors, -allInstanceVariableMirrors): Modified to 
	now call the new methods added to ETClassMirror.
	* Headers/ETInstanceVariableMirror.h:
	* Source/ETInstanceVariableMirror.m:
	New ivar _cachedValueMirror.
	(-valueMirror, -cachedValueMirrorForValue:, -ownerObjectMirror): Added.
	(-initWithIvar:ownerMirror:, +mirrorWithIvar:ownerMirror:): Modified
	to include an extra 'ownerMirror' parameter.
	(-ownerMirror): Modified the return type to <ETMirror>.
	(-value, -setValue:): Updated to retrieve the owner with
	-ownerObjectMirror.

2009-06-30  Quentin Mathe <qmathe@club-internet.fr>

	New +[NSObject mutableClass] to simplify mutable class retrieval. This is 
	necessary to support Mac OS X and have all tests passed with Cocoa.
	With Cocoa, all collection classes are toll-free bridged with their 
	equivalent CoreFoundation types.
	The issue is that the instances returned by these collection classes always 
	use the mutable class variant as their superclass. e.g. NSCFDictionary which 
	is returned by NSDictionary (and also NSMutableDictionary) is a subclass of 
	NSMutableDictionary. The same holds for NSArray and other collection classes.
	Because of that, you have no way to conclude whether an instance is mutable 
	or not. There is no API in Foundation or CoreFoundation to check the 
	mutability.
	* Headers/NSObject+Model.h:
	* Source/NSObject+Model.m:
	* Headers/ETCollection.h:
	* Source/ETCollection.m:
	(+mutableClass): New method implemented by NSObject (dummy implementation) 
	and collection classes.