@@ -6,7 +6,9 @@ ifeq ($(USE_SSL_PKG), yes)
 SSL_CFLAGS = $(shell pkg-config --cflags openssl)
 endif
 
-libEtoileFoundation_CPPFLAGS += -D_GNU_SOURCE $(SSL_CFLAGS)
+libEtoileFoundation_CPPFLAGS += $(SSL_CFLAGS)
+libEtoileFoundation_CPPFLAGS += -D_GNU_SOURCE # For Linux
+libEtoileFoundation_CPPFLAGS += -D_XOPEN_SOURCE=600 # For Solaris
 libEtoileFoundation_OBJCFLAGS += -std=c99 
 libEtoileFoundation_CFLAGS += -std=c99 $(SSL_CFLAGS)
 
