@@ -1,3 +1,14 @@
+2009-09-25  Quentin Mathe <qmathe@club-internet.fr>
+
+	EtoileFoundation now compiles on Solaris.
+	* Source/NSFileManager+TempFile.m: Added a mkdtemp() implementation to 
+	compile on recent Solaris versions (only very recent versions include 
+	mkdtemp).
+	* GNUmakefile: Tweaked to know where to look for openssl on Solaris.
+	* Source/GNUmakefile: Declared _XOPEN_SOURCE test macro to allow us 
+	to use functions such as strdup() (POSIX extension to the C standard 
+	lib) on Solaris.
+
 2009-07-27  Quentin Mathe <qmathe@club-internet.fr>
 
 	* Headers/ETClassMirror.h:
